--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   },
   "homepage": "https://github.com/jiheh/hangman#readme",
   "dependencies": {
-    "css-loader": "^2.1.1",
     "express": "^4.16.4",
-    "pixi.js": "^5.0.0-rc.2",
+    "pixi.js": "^4.8.2",
     "socket.io": "^2.2.0",
-    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
