--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "pixi.js": "^4.8.2",
+    "random-words": "^1.1.0",
     "socket.io": "^2.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
